objects/amc__Issue__c.object
<CustomObject>
    <fields>
        <fullName>amc__Action_Name__c</fullName>
        <formula>amc__Action__r.amc__Action_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Action Name from the Action this Issue relates to</inlineHelpText>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Action this Issue relates to</inlineHelpText>
        <label>Action</label>
        <referenceTo>amc__Action__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Category__c</fullName>
        <description>Identifies the Issue Category this Issue relates to.</description>
        <inlineHelpText>Identifies the Issue Category this Issue relates to.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Checklist Item this Issue relates to</inlineHelpText>
        <label>Checklist Item</label>
        <referenceTo>amc__Checklist_Item__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Date_Identified__c</fullName>
        <description>Identifies the date the Issue was first raised</description>
        <inlineHelpText>Identifies the date the Issue was first raised</inlineHelpText>
        <label>Date Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Date_Resolved__c</fullName>
        <description>Identifies the date the Issue was resolved</description>
        <inlineHelpText>Identifies the date the Issue was resolved</inlineHelpText>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Exclude_from_Client_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Issue should be excluded from the Client Overview Page</inlineHelpText>
        <label>Exclude from Client Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Billable__c</fullName>
        <inlineHelpText>Identifies the billable hours that have been associated to this Issue from Time Logs</inlineHelpText>
        <label>Hours Completed - Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Completed_Non_Billable__c</fullName>
        <inlineHelpText>Identifies the non billable hours that have been associated to this Issue from Time Logs</inlineHelpText>
        <label>Hours Completed - Non Billable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Impact_Notes__c</fullName>
        <description>Identifies the detailed notes on the impact</description>
        <inlineHelpText>Identifies the detailed notes on the impact</inlineHelpText>
        <label>Impact Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Impact__c</fullName>
        <description>Identifies the impact this Issue is having on the Project</description>
        <inlineHelpText>Identifies the impact this Issue is having on the Project</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Include_in_Weekly_Status_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>can this be included in the weekly status report pdf?</description>
        <label>Include in Weekly Status Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Issue_Name__c</fullName>
        <description>A descriptive name of the Issue</description>
        <inlineHelpText>A descriptive name of the Issue</inlineHelpText>
        <label>Issue Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Issue_Notes__c</fullName>
        <description>Identifies the detailed notes regarding this Issue</description>
        <label>Issue Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Issue_Owner_Current_User__c</fullName>
        <formula>IF(amc__Issue_Owner__r.amc__User__r.Id  = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the User viewing the record is the User linked to the Role that is the Issue Owner. If true, 1 is displayed, if false, 0 is displayed. This field can be used to create Dynamic List View / Report Filters</inlineHelpText>
        <label>Issue Owner Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Issue_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the person that will be responsible for resolving this issue</description>
        <inlineHelpText>Identifies the person that will be responsible for resolving this issue</inlineHelpText>
        <label>Issue Owner</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Milestone_Name__c</fullName>
        <formula>amc__Action__r.amc__Milestone__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field: References the Milestone Name that the Action this Issue relate to is part of</inlineHelpText>
        <label>Milestone Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Priority__c</fullName>
        <inlineHelpText>Identifies the Priority rating for this Issue</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Project this Issue relates to</description>
        <inlineHelpText>Identifies the Project this Issue relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Resolution_Notes__c</fullName>
        <description>Identifies the detailed notes on how this Issue was resolved</description>
        <inlineHelpText>Identifies the detailed notes on how this Issue was resolved</inlineHelpText>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Risk this Issue relates to</inlineHelpText>
        <label>Risk</label>
        <referenceTo>amc__Risk__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <description>Identifies the current status of the Issue</description>
        <inlineHelpText>Identifies the current status of the Issue</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Total_Hours_Completed__c</fullName>
        <formula>amc__Hours_Completed_Billable__c + amc__Hours_Completed_Non_Billable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &apos;Hours Completed - Billable&apos; + &apos;Hours Completed - Non Billable&apos;</inlineHelpText>
        <label>Total Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ISS-{000000}</displayFormat>
        <label>Issue Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Resolved_Date_Should_be_greater</fullName>
        <active>true</active>
        <errorConditionFormula>amc__Date_Resolved__c  &lt;  amc__Date_Identified__c</errorConditionFormula>
        <errorDisplayField>amc__Date_Resolved__c</errorDisplayField>
        <errorMessage>Date Resolved should be greater than Date Identified.</errorMessage>
    </validationRules>
</CustomObject>